--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
    "author": "nghia <nqnghia285@gmail.com>",
    "license": "MIT",
    "scripts": {
-      "heroku-prebuild": "cd front-end/ && yarn install && cd ../back-end/ && yarn install",
+      "heroku-prebuild": "cd front-end && yarn install && cd ../back-end && yarn install",
       "deploy": "sh ./deploy.sh",
-      "prebuild:be": "cd back-end && yarn migrate && yarn generate && yarn copy:.prisma:to:fe",
+      "prebuild:be": "cd back-end && yarn migrate:g && yarn copy:.prisma:to:fe",
       "build:fe": "yarn build:fe:copy",
       "build": "yarn prebuild:be && yarn build:fe && yarn build",
-      "start": "cd back-end/ && yarn start",
+      "start": "cd back-end && yarn start",
       "git": "sh git-push.sh"
    },
    "engines": {
