--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,8 +7,8 @@
    "license": "UNLICENSED",
    "scripts": {
       "prebuild": "rimraf dist",
-      "build:fe": "cd ../front-end && rm -rf build && yarn build && cd ../back-end",
-      "build:fe:copy": "cd ../front-end && rm -rf build && yarn build && rm -rf ../back-end/public && cp -a build/* ../back-end/public && cd ../back-end",
+      "build:fe": "cd ../front-end && rm -rf build && yarn build",
+      "build:fe:copy": "cd ../front-end && rm -rf build && yarn build && rm -rf ../back-end/public && cp -a build/* ../back-end/public",
       "build": "nest build",
       "copy:fe": "rm -rf public && cp -a ../front-end/build/* public",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
