--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "deploy": "sh ./deploy.sh",
       "prebuild:be": "cd back-end && yarn migrate:deploy && yarn generate && yarn copy:.prisma:to:fe",
       "build:fe": "cd back-end && yarn build:fe",
-      "copy:fe": "yarn copy:fe",
+      "copy:fe": "cd back-end && yarn copy:fe",
       "build:be": "cd back-end && yarn build",
       "build": "yarn prebuild:be && yarn build:fe && yarn copy:fe && yarn build:be",
       "start": "cd back-end && yarn start",
