--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,13 +7,13 @@
    "license": "UNLICENSED",
    "scripts": {
       "prebuild": "rimraf dist",
-      "build:fe": "cd ../front-end && rm -rf build && yarn build",
-      "build:fe:copy": "cd ../front-end && rm -rf build && yarn build && rm -rf ../back-end/public && cp -a build/* ../back-end/public",
+      "build:fe": "bash scripts/build-fe.sh",
+      "build:fe:copy": "bash scripts/build-fe-copy-to-public.sh",
       "build": "nest build",
-      "copy:fe": "rm -rf public && mkdir -p public && cp -a ../front-end/build/* public",
+      "copy:fe": "bash scripts/copy-build-to-public.sh",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
       "start": "nest start",
-      "start:dev:g": "yarn generate && nest start --watch",
+      "start:g:dev": "yarn generate && nest start --watch",
       "start:dev": "nest start --watch",
       "start:debug": "nest start --debug --watch",
       "start:prod": "node dist/main",
@@ -24,13 +24,13 @@
       "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
       "test:e2e": "jest --config ./test/jest-e2e.json",
       "generate": "prisma generate",
-      "copy:type-graphql:to:fe": "cp -a src/prisma/generated/* ../front-end/src",
-      "clear:generated": "rm -rf src/prisma/generated",
-      "clear:type-graphql:fe": "rm -rf ../front-end/src/type-graphql",
-      "clear:.prisma:fe": "rm -rf ../front-end/node_modules/.prisma",
-      "copy:.prisma:to:fe": "cp -a node_modules/.prisma ../front-end/node_modules",
-      "mv:type-graphql:to:fe": "yarn clear:type-graphql:fe && yarn copy:type-graphql:to:fe && yarn clear:generated",
-      "generate:fe": "yarn clear:generated && prisma generate && yarn mv:type-graphql:to:fe && yarn clear:.prisma:fe && yarn copy:.prisma:to:fe",
+      "copy:type-graphql:to:fe": "bash scripts/copy-type-graphql-to-fe.sh",
+      "clear:generated": "bash scripts/clear-generated.sh",
+      "clear:type-graphql:fe": "bash scripts/clear-type-graphql-fe.sh",
+      "clear:.prisma:fe": "bash scripts/clear-.prisma-fe.sh",
+      "copy:.prisma:to:fe": "bash scripts/copy-.prisma-to-fe.sh",
+      "move:type-graphql:to:fe": "bash scripts/move-type-graphql-to-fe.sh",
+      "generate:fe": "bash scripts/generate-and-move-type-graphql-to-fe.sh",
       "migrate:dev": "prisma migrate dev --skip-generate --name init",
       "migrate:dev:g": "prisma migrate dev --name init --preview-feature",
       "migrate:reset": "prisma migrate reset --preview-feature",
