--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
    "author": "nghia <nqnghia285@gmail.com>",
    "license": "MIT",
    "scripts": {
-      "heroku-prebuild": "echo This runs heroku-prebuild",
-      "preinstall": "echo This runs preinstall",
-      "install": "echo This runs install",
-      "postinstall": "echo This runs postinstall",
-      "build": "echo This runs build",
-      "heroku-cleanup": "echo This runs heroku-cleanup",
+      "heroku-prebuild": "echo heroku-prebuild: && pwd -W",
+      "preinstall": "echo preinstall: && pwd -W",
+      "install": "echo install: && pwd -W",
+      "postinstall": "echo postinstall: && pwd -W",
+      "build": "echo build: && pwd -W",
+      "heroku-cleanup": "echo heroku-cleanup: && pwd -W",
       "deploy": "sh scripts/deploy.sh",
       "prebuild:be": "sh scripts/prebuild-be.sh",
       "build:fe": "sh scripts/build-fe.sh",
       "build:be": "sh scripts/build-be.sh",
-      "start": "echo This runs start",
+      "start": "echo start: && pwd -W",
       "git": "sh scripts/git-push.sh"
    },
    "engines": {
