--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
    "author": "nghia <nqnghia285@gmail.com>",
    "license": "MIT",
    "scripts": {
-      "heroku-prebuild": "echo heroku-prebuild: && pwd -W",
-      "preinstall": "echo preinstall: && pwd -W",
-      "install": "echo install: && pwd -W",
-      "postinstall": "echo postinstall: && pwd -W",
-      "build": "echo build: && pwd -W",
-      "heroku-cleanup": "echo heroku-cleanup: && pwd -W",
-      "deploy": "sh scripts/deploy.sh",
-      "prebuild:be": "sh scripts/prebuild-be.sh",
-      "build:fe": "sh scripts/build-fe.sh",
-      "build:be": "sh scripts/build-be.sh",
-      "start": "echo start: && pwd -W",
-      "git": "sh scripts/git-push.sh"
+      "heroku-prebuild": "echo heroku-prebuild",
+      "preinstall": "echo preinstall",
+      "install": "bash scripts/install.sh",
+      "postinstall": "bash scripts/postinstall.sh",
+      "build": "bash scripts/build.sh",
+      "heroku-cleanup": "echo heroku-cleanup",
+      "deploy": "bash scripts/deploy.sh",
+      "start": "bash scripts/start.sh",
+      "git": "bash scripts/git-push.sh"
    },
    "engines": {
       "node": "16.x",
